--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
-    "nuxt": "^3.6.5"
+    "autoprefixer": "^10.4.15",
+    "nuxt": "^3.6.5",
+    "postcss": "^8.4.28",
+    "sass": "^1.66.1",
+    "tailwindcss": "^3.3.3"
   }
 }
