--- a/app/package.json
+++ b/app/package.json
@@ -16,5 +16,8 @@
     "postcss": "^8.4.28",
     "sass": "^1.66.1",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "flowbite": "^1.8.1"
   }
 }
